--- a/d2/configs/detr_256_6_6_torchvision_custom.yaml
+++ b/d2/configs/detr_256_6_6_torchvision_custom.yaml
@@ -12,14 +12,19 @@ MODEL:
     GIOU_WEIGHT: 2.0
     L1_WEIGHT: 5.0
     NUM_OBJECT_QUERIES: 100
+    NUM_CLASSES: 80
+  RETINANET:
+    NUM_CLASSES: 80
+  ROI_HEADS:
+    NUM_CLASSES: 80
 DATASETS:
   TRAIN: ("uav_dataset1", "uav_dataset2", "uav_dataset3")
   TEST: ("uav_dataset4",)
 SOLVER:
   IMS_PER_BATCH: 64
   BASE_LR: 0.0001
-  STEPS: (300,) # (369600,)
-  MAX_ITER: 500 # 554400
+  STEPS: (18000, 21000) # (369600,)
+  MAX_ITER: 22500 # 554400
   WARMUP_FACTOR: 1.0
   WARMUP_ITERS: 10
   WEIGHT_DECAY: 0.0001
