--- a/d2/configs/detr_256_6_6_torchvision_custom.yaml
+++ b/d2/configs/detr_256_6_6_torchvision_custom.yaml
@@ -18,13 +18,13 @@ MODEL:
   ROI_HEADS:
     NUM_CLASSES: 80
 DATASETS:
-  TRAIN: ("shapes_train",)
-  TEST: ("shapes_val_no_gauss",)
+  TRAIN: ("aerial_train_cars",)
+  TEST: ("aerial_train_valid",)
 SOLVER:
   IMS_PER_BATCH: 64
   BASE_LR: 0.0001
-  STEPS: (200000, 215000) # (369600,)
-  MAX_ITER: 225000 # 554400
+  STEPS: (3500, 4200) # (369600,)
+  MAX_ITER: 4613 # 554400
   WARMUP_FACTOR: 1.0
   WARMUP_ITERS: 10
   WEIGHT_DECAY: 0.0001
