fix aerial valid data

--- a/d2/configs/detr_256_6_6_torchvision_custom.yaml
+++ b/d2/configs/detr_256_6_6_torchvision_custom.yaml
@@ -19,7 +19,7 @@ MODEL:
     NUM_CLASSES: 80
 DATASETS:
   TRAIN: ("aerial_train_cars",)
-  TEST: ("aerial_train_valid",)
+  TEST: ("aerial_valid_cars",)
 SOLVER:
   IMS_PER_BATCH: 64
   BASE_LR: 0.0001
